# ethicic-public

./: .browserslistrc  .dockerignore  .env.example  .env.production.template  .eslintignore  .gitignore  .htmlhintrc  .kinsta  .pre-commit-config.yaml  .pre-commit-config.yaml.disabled  .prettierignore  .prettierrc.json  .ruff.toml  .secrets.baseline  .stylelintignore  .stylelintrc.json  BROKEN_LINKS_FIX_PLAN.md  BROKEN_LINKS_REPORT.md  CLAUDE.md  CLEANED_TESTS_SUMMARY.md  CMS_EDITABILITY_REPORT.md  COMPREHENSIVE_LINK_CHECK_FINAL_REPORT.md  COVERAGE_EXPANSION_REPORT.md  CSS_MAINTENANCE_GUIDE.md  DEPLOYMENT.md  DEPRECATED.md  Dockerfile  Dockerfile.backup  ENHANCED_LINK_CHECK_REPORT.md  EXHAUSTIVE_BROKEN_LINKS_REPORT.md  FINAL_TEST_CLEANUP_SUMMARY.md  GITHUB_ISSUE_MISSING_IMAGES.md  HTTP_STATUS_CODE_FIXES.md  IMPORT_AUDIT_REPORT.md  KINSTA_DEPLOYMENT_CHECKLIST.md  KINSTA_DEPLOYMENT_FINAL_STEPS.md  MISSING_INVESTVEGAN_CONTENT.md  Makefile  Procfile  README.md  (+135 more)
.claude/: deployment_sentinel_log.md  deployment_tracking.md
.claude/docs/: css-architecture-2025.md  investigation-2025-01-24.md
.github/workflows/: css-conflicts.yml
cleanup/: CRUFT_CLEANUP_PLAN.md
config/ssl/: ubicloud-root-ca.pem
docs/: ACCESSIBILITY_FIXES_2025-01-28.md  BRAND_COLORS.md  CSS_ARCHITECTURE.md  CSS_ARCHITECTURE_CURRENT.md  CSS_ARCHITECTURE_SUMMARY.md  CSS_CONDITIONAL_LOADING_ANALYSIS.md  CSS_LINTING_SETUP.md  CSS_MAINTENANCE_GUIDE.md  CSS_OVERVIEW.md  CSS_TESTING.md  DEPLOYMENT.md  DEVELOPMENT_WORKFLOW.md  FRONTEND_RENAISSANCE.md  KINSTA_DEPLOYMENT_CHECKLIST.md  LINTING.md  MEDIA_STORAGE_SETUP.md  MONITORING_SYSTEMS.md  POSTCSS_BUILD_PROCESS.md  POSTHOG_ERROR_TRACKING.md  README.md  TAILWIND_MIGRATION_GUIDE.md  TYPOGRAPHY_USAGE.md  USABILITY_AUDIT_2025-01-28.md  YouTube_Video_Implementation.md  about_text.md  comprehensive-broken-links-analysis-2025-01-24.md  css-override-elimination-plan.md  homepage-cms-migration.md  inline-style-migration.md  onboarding_form.md  performance_system_readme.md  wcag_contrast_audit_report.md
ethicic/: asgi.py  build_settings.py  database_config.py  settings.py  settings_build.py  urls.py  wsgi.py
fixtures/: all_content.json  public_site_aboutpage.json  public_site_advisorpage.json  public_site_blogindexpage.json  public_site_blogpost.json  public_site_consultationpage.json  public_site_contactpage.json  public_site_criteriapage.json  public_site_encyclopediaentry.json  public_site_encyclopediaindexpage.json  public_site_faqarticle.json  public_site_guidepage.json  public_site_homepage.json  public_site_institutionalpage.json  public_site_legalpage.json  public_site_mediaitem.json  public_site_mediapage.json  public_site_onboardingpage.json  public_site_pricingpage.json  public_site_priddqpage.json  public_site_processpage.json  public_site_researchpage.json  public_site_solutionspage.json  public_site_strategylistpage.json  public_site_strategypage.json  taggit_tag.json  wagtailcore_page.json  wagtailcore_site.json
git_hooks/: pre-commit
mcp-servers/: README.md
mcp-servers/memory/: package-lock.json  package.json  start.sh  test.js  tsconfig.json
public_site/: admin.py  admin_panels_ai_backup.py  blocks.py  blocks_ai_backup.py  cloudflare_blocks.py  context_processors.py  db_router.py  debug_view.py  forms.py  homepage_view.py  homepage_view_cms.py  inline_test_view.py  middleware.py  models.py  models.py.backup  models.py.bak  models.py.bak2  models_newsletter.py  performance_system_readme.md  standalone_constants.py  standalone_email_utils.py  urls.py  urls_ai.py  views.py  views_with_crm_deps.py  wagtail_hooks.py  wagtail_hooks_ai_backup.py
public_site/migrations/: 0001_initial.py  0001_initial_squashed.py  0001_ultimate_public_site_migration.py  0001_ultimate_public_site_migration.py.backup  0002_aboutpage_advisorpage_blogindexpage_blogpost_and_more.py  0002_add_missing_homepage_fields.py.backup  0002_add_performance_indexes.py  0002_initial.py  0002_remove_wordpress_fields.py.backup  0002_remove_wordpress_fields_squashed_0005_add_aboutpage_social_fields.py  0002_remove_wordpress_fields_squashed_0005_add_aboutpage_social_fields.py.backup  0003_add_business_constraints.py  0003_add_display_title_to_blogindexpage.py.backup  0003_add_editable_fields_to_pages.py  0003_add_philosophy_fields.py  0004_aboutpage_advisorpage_blogindexpage_blogpost_and_more.py  0004_add_aboutpage_content_fields.py  0004_add_aboutpage_content_fields.py.backup  0004_add_missing_strategy_fields.py  0004_fix_aboutpage_fields.py  0004_remove_newsletterpage_page_ptr_and_more.py  0004_safe_add_homepage_fields.py  0005_add_aboutpage_social_fields.py  0005_add_aboutpage_social_fields.py.backup  0005_add_comprehensive_pricing_fields.py  0005_alter_strategypage_performance_disclaimer.py  0005_homepage_cta_section_header_and_more.py  0006_add_strategy_related_models.py  0006_populate_pricing_additional_services.py  0006_populate_pricing_additional_services_squashed_0008_populate_process_page_fields.py  0007_add_missing_document_field.py  0007_add_process_page_fields.py  0008_alter_strategydocument_category_and_more.py  0008_populate_process_page_fields.py  0009_add_about_page_layout_fields.py  0009_add_about_page_timeline_hobbies.py  0010_populate_about_page_timeline_hobbies.py  0010_update_headshot_url_to_r2.py  0011_add_advisor_page_comprehensive_fields.py  0011_fix_migration_state.py  (+35 more)
public_site/services/: __init__.py  brochure_service.py  platform_client.py
public_site/templatetags/: blog_filters.py  safe_urls.py
public_site/tests/: README.md  SUMMARY.md  TEST_SUITE_STATUS.md  __init__.py  run_model_tests.sh  run_tests.sh  run_tests_when_configured.sh  test_base.py  test_base_old.py  (+5 more)
scripts/: build-css.js  build_css.py  post-deploy.sh  setup_certs.py
static/: browserconfig.xml  carbon.txt  llms.txt  manifest.json  robots.txt
templates/: 404.html  500.html  garden_overview.html  onboarding_thank_you.html  search_results.html
tests/: __init__.py  conftest.py  wagtail_test_base.py
(+428 files in other folders)
